# notal

./: Cargo.toml  flake.nix
src/: main.rs  parser.rs  server.rs  vault.rs
