[package]
name = "notal"
version = "0.1.0"
edition = "2021"
description = "Lean Obsidian vault MCP server for Claude Code"

[dependencies]
rmcp = { version = "1.3", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.0"
ignore = "0.4"
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
